--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html, body {
   color: #333333;
   font-family: "Lato", Calibri, sans-serif;
   font-size: 16px;
-  background-color: #3A3042; }
+  background-color: #e1dce4; }
   html h2, body h2 {
     font-size: 1.3em; }
   html h3, body h3 {
